testsuite/tests/tool-toplevel/pr6468.compilers.reference
Line 8, characters 0-9:
8 | exception E
    ^^^^^^^^^
Error: Syntax error


Line 3, characters 0-0:
Error: Syntax error

